fix inverted images in dark mode

--- a/feedly-night.css
+++ b/feedly-night.css
@@ -10,11 +10,9 @@ iframe,
 picture,
 video,
 img[src*='feed-icons'],
-.postTags img[src*='plugins'],
-.cdmFooter img[src*='plugins'],
-.cdmContentInner img,
-.cdmIntermediate img,
-.postContent img {
+.tags img[src*='plugins'],
+.footer img[src*='plugins'],
+.content img {
 	filter: hue-rotate(180deg) invert(100%) brightness(111.111%);
 }
 iframe:-moz-full-screen,
